--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <ul>
          <li> Vagrant: Gerenciando maquinas virtuales</li>
          <li> Docker: creando container sin dolor de cabeza</li>
-         <li> Ansible: Su infraestructura como codigo </li>
+         <li> (MODIFICANDO)Ansible: Su infraestructura como codigo </li>
          <li> Integración continua: Madurez y productuctividad en el desarollo de software </li>
          <li>kubernetes: Introduccion a la orqueztacion de containers</li>         
      </ul>
