editando con Ana

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
      <ul>
          <li> Vagrant: Gerenciando maquinas virtuales</li>
-         <li> Docker(ANA): creando container sin dolor de cabeza</li>
+         <li> Docker(ANA MODIFICANDO): creando container sin dolor de cabeza</li>
          <li> (MODIFICANDO)Ansible: Su infraestructura como codigo </li>
          <li> Integración continua: Madurez y productuctividad en el desarollo de software </li>
          <li>kubernetes: Introduccion a la orqueztacion de containers</li>         
